Changed element state definition mixins

--- a/packages/base/src/mixins/css-variables.sass
+++ b/packages/base/src/mixins/css-variables.sass
@@ -21,14 +21,22 @@
 
     @content
 
-@mixin cssvar-define-states($rules, $states)
+@mixin cssvar-define-state($rules, $state: 'default')
   @each $rule, $value in $rules
-    --#{$rule}-default: #{$value}
-    --#{$rule}: var(--#{$rule}-default)
+    --#{$rule}-#{$state}: #{$value}
 
-    // TODO: Find out if this behaviour is useful
-    // @each $state in $states
-    //   --#{$rule}-#{$state}: var(--#{$rule}-default)
+    @if $state == 'default'
+      --#{$rule}: var(--#{$rule}-#{$state})
+
+// TODO: Find out if this behaviour is useful
+@mixin cssvar-define-states($rules, $states, $namespace: '')
+  @each $rule, $value in $rules
+    --#{$namespace}#{$rule}-default: #{$value}
+
+    @each $state in $states
+      --#{$namespace}#{$rule}-#{$state}: var(--#{$namespace}#{$rule}-default)
+
+    --#{$namespace}#{$rule}: var(--#{$namespace}#{$rule}-default)
 
 @mixin cssvar-use-state($rule-names, $state)
   @each $rule in $rule-names
