--- a/docs/.vuepress/styles/helpers/controls.sass
+++ b/docs/.vuepress/styles/helpers/controls.sass
@@ -46,3 +46,17 @@
       background-color: transparent
 
   +control-checker--variant_inline($block: '.d-control-checkbox-example')
+
+
+.d-control-button-tone-example
+  +control-box
+  +control-focus-behavior
+  +control-button-base
+
+  cursor: pointer
+
+  &--styling_primary
+    +control-button-styling(theme-primary)
+
+  &--styling_accent
+    +control-button-styling(theme-accent)
