--- a/docs/.vuepress/styles/helpers/controls.sass
+++ b/docs/.vuepress/styles/helpers/controls.sass
@@ -48,15 +48,22 @@
   +control-checker--variant_inline($block: '.d-control-checkbox-example')
 
 
-.d-control-button-tone-example
-  +control-box
-  +control-focus-behavior
-  +control-button-base
+// .d-control-button-tone-example
+//   +control-box
+//   +control-focus-behavior
+//   +control-button-base
 
-  cursor: pointer
+//   cursor: pointer
 
-  &--styling_primary
-    +control-button-styling(theme-primary)
+//   &--styling_primary
+//     +control-button-styling(theme-primary)
 
-  &--styling_accent
-    +control-button-styling(theme-accent)
+//   &--styling_accent
+//     +control-button-styling(theme-accent)
+
+//   &--variant_text
+//     +control-button-variant-text
+
+//   &--variant_ghost
+//     +control-button-variant-ghost
+//     --control-box-border-width: 2px
