--- a/packages/controls/src/index.sass
+++ b/packages/controls/src/index.sass
@@ -1,7 +1,8 @@
 $CONTROLS_PREFIX: 'control-' !default
 
+@import "states"
 @import "box"
 @import "checker"
 @import "stack"
-@import "tone"
-@import "button"
+// @import "tone"
+// @import "button"
