--- a/packages/avatar/src/block.sass
+++ b/packages/avatar/src/block.sass
@@ -9,7 +9,6 @@
   line-height: 1
   width: 1em
   height: 1em
-  border-radius: 100cm
   align-items: center
   justify-content: center
   background-color: var(--theme-relief-3)
@@ -22,10 +21,9 @@
       width: 100%
       height: 100%
       object-fit: cover
-      border-radius: 100cm
       overflow: hidden
       border: 0
-      font-size: vat(--type-font-size-xs)
+      font-size: var(--type-font-size-xs)
 
     &label
       display: block
@@ -34,22 +32,30 @@
       font-weight: 700
 
   &--
+    &appearance_
+      &rounded
+        +q-both-adaptive
+          &,
+          & .#{$DERMIS_PREFIX}avatar__image
+            border-radius: 100cm
+
     &size_
       +mq-generate-property-modifiers('--avatar-size-factor', $avatar-size-map)
 
       &full
-        width: 100%
-        height: auto
-        position: relative
+        +q-both-adaptive
+          width: 100%
+          height: auto
+          position: relative
 
-        &:before
-          content: ''
-          display: block
-          padding-top: 100%
+          &:before
+            content: ''
+            display: block
+            padding-top: 100%
 
-        .avatar__image,
-        .avatar__label
-          position: absolute
-          top: 50%
-          left: 50%
-          transform: translateX(-50%) translateY(-50%)
+          .avatar__image,
+          .avatar__label
+            position: absolute
+            top: 50%
+            left: 50%
+            transform: translateX(-50%) translateY(-50%)
