--- a/packages/dermis/index.sass
+++ b/packages/dermis/index.sass
@@ -14,5 +14,6 @@
 @import "@dermis/caption"
 @import "@dermis/link"
 @import "@dermis/table"
+@import "@dermis/avatar"
 
 @import "@dermis/controls"
