Added utils package dependency

--- a/packages/dermis/index.sass
+++ b/packages/dermis/index.sass
@@ -9,6 +9,7 @@
 @import "@dermis/aspect-ratio"
 @import "@dermis/panel"
 @import "@dermis/section"
+@import "@dermis/utils"
 
 @import "@dermis/inliner"
 @import "@dermis/caption"
