--- a/packages/link/src/definition.sass
+++ b/packages/link/src/definition.sass
@@ -1,4 +1,5 @@
 @at-root :root
-  --link-color: #{$link-color}
+  --link-color-default: #{$link-color}
+  --link-color: var(--link-color-default)
   --link-color-active: #{$link-color-active}
   --link-color-visited: #{$link-color-visited}
