--- a/packages/link/src/variables.sass
+++ b/packages/link/src/variables.sass
@@ -1,6 +1,6 @@
 $LINK_USE_IN_TYPE_CONTENT: true !default
 
 $link-shadow-base-width: 0.0625em !default
-$link-color: var(--theme-link-base) !default
+$link-color: var(--theme-link-default) !default
 $link-color-active: var(--theme-link-active) !default
 $link-color-visited: var(--theme-link-visited) !default
