--- a/packages/controls/src/states/variables.sass
+++ b/packages/controls/src/states/variables.sass
@@ -1,5 +1,5 @@
 $control-focus-outline-width: 3px !default
 
-$control-focus-outline-color: grey
+$control-focus-outline-color: transparent
 @if $TONE_GENERATE_THEME
   $control-focus-outline-color: tone-theme-rgba(0.2, primary, 70) !default
