--- a/packages/aspect-ratio/src/block.sass
+++ b/packages/aspect-ratio/src/block.sass
@@ -27,7 +27,13 @@
         & > .#{$DERMIS_PREFIX}aspect-ratio__body
           max-width: 100%
           max-height: 100%
-
+      &covered
+        & > .#{$DERMIS_PREFIX}aspect-ratio__body
+          width: 100%
+          height: 100%
+          object-fit: cover 
+          object-position: center
+        
     &ratio_
       &1x1
         +q-both-adaptive
