--- a/packages/avatar/src/block.sass
+++ b/packages/avatar/src/block.sass
@@ -12,7 +12,7 @@
   align-items: center
   justify-content: center
   background-color: var(--theme-relief-3)
-  color: vat(--theme-text-1)
+  color: var(--theme-text-1)
 
   &__
     &image
