--- a/packages/grid/src/cols/mixins.sass
+++ b/packages/grid/src/cols/mixins.sass
@@ -1,4 +1,6 @@
+@use 'sass:math'
+
 @function grid-cols($count, $total: $grid-cols-columns-count, $error: $grid-cols-calculation-error)
-  $percent: 100% * $count / $total
+  $percent: 100% * math.div($count, $total)
 
   @return $percent - if($percent % 1 > 0, $error, 0)
