--- a/packages/tone/src/variables/base.scss
+++ b/packages/tone/src/variables/base.scss
@@ -10,8 +10,8 @@ $TONE_SATURATION_RANGE: 0 $TONE_SATURATION_MAX !default;
 $TONE_BRIGHTNESS_RANGE: 0 $TONE_BRIGHTNESS_MAX !default;
 
 $TONE_HUE_SHIFT: 4 !default;
-$TONE_SATURATION_SHIFT: $TONE_SATURATION_MAX / 6 !default;
-$TONE_BRIGHTNESS_SHIFT: $TONE_BRIGHTNESS_MAX / 6 !default;
+$TONE_SATURATION_SHIFT: div($TONE_SATURATION_MAX, 6) !default;
+$TONE_BRIGHTNESS_SHIFT: div($TONE_BRIGHTNESS_MAX, 6) !default;
 
 $TONE_DEFAULT_SPECS: () !default;
 $TONE_DEFAULT_SPECS: map-merge((
