--- a/packages/table/src/mixins.sass
+++ b/packages/table/src/mixins.sass
@@ -1,3 +1,5 @@
+@use "sass:math"
+
 %aspect-ratio-body
   position: absolute
   left: 0
@@ -6,7 +8,7 @@
 
 
 @function aspect-ratio-percentage($ratio)
-  @return percentage(nth($ratio, 2) / nth($ratio, 1))
+  @return percentage(math.div(nth($ratio, 2), nth($ratio, 1)))
 
 
 @mixin aspect-ratio-body()
