--- a/packages/type/src/mixins.sass
+++ b/packages/type/src/mixins.sass
@@ -1,8 +1,10 @@
+@use "sass:math"
+
 @function type-line-height($size: 'body', $line: 'body', $fit-size: $size, $fit-line: $line)
   $font-size: map-get($type-font-size-map, $size)
   $fit: map-get($type-font-size-map, $fit-size) * map-get($type-line-height-map, $fit-line)
 
-  @return div(rut-floor($fit), $font-size)
+  @return math.div(rut-floor($fit), $font-size)
 
 @mixin type-line($size: 'body', $line: 'body', $fit-size: $size, $fit-line: $line)
   font-size: var(--type-font-size-#{$size})
