Fix assign css-variable from sass calculation result

--- a/packages/grid/src/container/block.sass
+++ b/packages/grid/src/container/block.sass
@@ -23,5 +23,5 @@
       @each $size, $value in $grid-row-space-map
         &#{$size}
           +mq-both-adaptive
-            --grid-cell-space-half: math.div($value, 2)
+            --grid-cell-space-half: #{math.div($value, 2)}
 
